<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">BOBO-U</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="btn_all_product">ALL</string>
    <string name="btn_best_seller">BEST SELLER</string>
    <string name="btn_featured_products">FEATURED PRODUCTS</string>
    <string name="btn_add_to_cart_label">Add to card</string>
    <string name="btn_detail_label">More detail</string>
    <string name="msg_load_more">Loading...</string>
    <string name="search_text">Search</string>
    <string name="search_text_hint">Bobo search...</string>
    <string name="waitting_message">Please wait...</string>
    <string name="versionNameLabel">Version</string>
    
    <string name="voucher_fragment_invalid_code">Voucher invalid!</string>
    
    <!-- Radio group -->
    <string name="radio_group_voucher">Voucher</string>
    <string name="radio_group_no_voucher">None</string>
    
    <!-- Payment -->
    <string name="payment_success_message">Success Payment</string>
    <string name="payment_thank_you_message">Thank you!</string>
    
    <string name="confirm_checkout_shipping_tax">Free shipping!</string>
    <!-- Country -->
    <string name="address_country_loading_error">Could not found list country!</string>
    
    <!-- Address -->    
    <string name="address_address_label">Address:</string>
    <string name="address_address_hint">Your address</string>
    <string name="address_last_name_label">Last name:</string>
    <string name="address_last_name_hint">Your last name</string>
    <string name="address_first_name_label">First name:</string>
    <string name="address_firt_name_hint">Your first name</string>
    <string name="address_contry_label">Country:</string>
    <string name="address_contry_hint">Your country</string>
    <string name="address_city_label">City:</string>
    <string name="address_city_hint">Your city</string>
    <string name="address_btn_create">Create</string>
    <string name="address_btn_confirm">Confirm</string>
    <string name="address_btn_paypal">Payment</string>
    <string name="address_btn_voucher">Next</string>
    <string name="address_btn_next">Next</string>
    <string name="address_btn_refresh">Refresh</string>
    <string name="address_btn_create_address">Create address</string>
    <string name="address_create_success">Address created</string>
    <string name="address_create_failed">Create address failed</string>
    
    <string name="address_list_carrier_label">Carriers:</string>
    <string name="address_giftcode_label">Voucher:</string>
    
    
    <!-- Add Cart Items -->
    <string name="add_cart_failed">Add shopping cart item error.</string>
    <string name="add_cart_success">Add shopping cart success</string>
    
    <!-- Register -->
    <string name="waitting_register_message">Waitting for register...</string>
    <string name="waitting_login_message">Waitting for login...</string>
    <string name="register_failed_message">Register error</string>
    <string name="register_success_message">Register success</string>
    
    <string name="first_name_label">First name:</string>
    <string name="last_name_label">Last name:</string>
    <string name="password_label">Password:</string>
    <string name="confirm_password_label">Re-Password:</string>
    <string name="email_label">Email:</string>
    <string name="empty_field">Please input data!</string>
    <string name="password_not_matched">Password not matched!</string>
    <string name="email_not_correct">Email not correct!</string>
    <string name="first_name_hint">Your first name</string>
    <string name="last_name_hint">Your last name</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email_hint">Your email</string>

    <!-- Contact -->
    <string name="contact_send_btn_label">Send</string>
    <string name="contact_name_label">Name:</string>
    <string name="contact_name_hint">Your name</string>
    <string name="contact_from_label">From:</string>
    <string name="contact_from_hint">Your email</string>
    <string name="contact_message_label">Message:</string>
    <string name="contact_message_hint">Your message</string>
    <string name="contact_waitting_message">Sending contact...</string>
    <string name="contact_send_failed">Can not send your contact!</string>
    <!-- Login -->
    <string name="user_name_label">User name:</string>
    <string name="password_login_label">Password:</string>
    <string name="user_name_hint">Your email</string>
    <string name="password_login_hint">Your password</string>
    <string name="login_failed_message">Login error</string>
    <string name="login_success_message">Login success</string>
    <!-- Buttons -->
    <string name="register_btn_label">Register</string>
    <string name="login_btn_label">Login</string>
    <string name="register_login_label">Register now</string>
    <string name="spin_to_win_label">SPIN TO WIN</string>
    <string name="spin_to_win_lucy_draw_label">LUCY DRAW</string>
    <string name="stop_spin_to_win_label">SPINING...</string>
        <!-- Cart Items -->
    <string name="items_cart_total_price">Total Price:</string>
    <string name="items_cart_check_out">Check Out</string>

    <!-- dialogs -->
    <string name="dialog_exit_app_title">Exit Bobo</string>
    <string name="dialog_exit_app_message">Exit BOBO-U Fashion?</string>
    <string name="dialog_exit_app_btn_Ok">OK</string>
    <string name="dialog_exit_app_btn_Cancel">Cancel</string>
    <string name="exit_label">Close</string>
    <string name="msg_empty_items_cart">Your shopping cart is empty.</string>
    <string name="txt_btn_retry">RETRY</string>
    <string name="not_found_data_message">Not found data :(</string>
    <!-- menu drawer -->
    <string name="menu_drawer_home">Home</string>
    <string name="menu_drawer_product">Product</string>
    <string name="menu_drawer_shop">Shop</string>
    <string name="menu_drawer_new_arrivals">New Arrivals</string>
    <string name="menu_drawer_best_seller">Best Seller</string>
    <string name="menu_drawer_apparel">Apparel</string>
    <string name="menu_drawer_accessories">Accessories</string>
    <string name="menu_drawer_clearance">Clearance</string>
    <string name="menu_drawer_event_spin_to_win">Event-Spin To Win</string>
    <string name="menu_drawer_about_us">About Us</string>
    <string name="menu_drawer_contact_us">Contact Us</string>
    
    <string name="shopping_cart_create_address">Create address</string>
    <string name="shopping_cart_select_address">Select address</string>
    <string name="shopping_cart_select_carrier">Select carrier</string>
    <string name="shopping_cart_voucher">Voucher</string>
    <string name="shopping_cart_payment">Payment</string>
    <string name="shopping_cart_confirm">Confirm</string>

    <!-- Fragment Home Menu -->
    <string name="fragment_home_menu_all">ALL</string>
    <string name="fragment_home_menu_best_seller">BEST SELLER</string>
    <string name="fragment_home_menu_featured_products">FEATURED PRODUCTS</string>
    <string name="fragment_home_menu_popular">POPULAR</string>
    <!-- Detail -->
    <string name="detail_title_label">Infomation</string>
    <string name="detail_info_label">Info</string>
    <string name="detail_price_label">Price</string>
    <string name="detail_model_label">Model</string>
    <string name="detail_condition_label">Condition</string>
    <string name="detail_more_info_label">More Info</string>
    <string name="detail_stock_label">Items</string>
    <string name="detail_data_sheet_label">Data sheet</string>
    <string name="detail_checking_color_stock">Please waiting...</string>

    <string name="spin_to_win_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
</resources>