<?xml version="1.0" encoding="utf-8"?>
<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--     android:layout_width="match_parent" -->
<!--     android:layout_height="match_parent" > -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                style="@style/RegisterTextStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/contact_name_label" />

            <EditText
                android:id="@+id/nameContact"
                style="@style/RegisterEdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/contact_name_hint"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="3dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                style="@style/RegisterTextStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/contact_from_label" />

            <EditText
                android:id="@+id/fromContact"
                style="@style/RegisterEdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/contact_from_hint"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="3dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                style="@style/RegisterTextStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/contact_message_label" />

            <EditText
                android:id="@+id/messageContact"
                style="@style/RegisterEdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_message_hint"
                android:maxLines="7"
                android:minLines="7"
                android:lines="7"
                android:paddingLeft="5dp"
                android:paddingRight="3dp"
                android:gravity="top" />
        </LinearLayout>
        <Button android:id="@+id/sendContactBtn"
            style="@style/RegisterButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_pink"
            android:text="@string/contact_send_btn_label" />
    </LinearLayout>

<!--     <include -->
<!--         android:id="@+id/notFoundContainer" -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="match_parent" -->
<!--         layout="@layout/layout_not_found_data" -->
<!--         android:clickable="true" /> -->

<!--     <include -->
<!--         android:id="@+id/loadingContainer" -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="match_parent" -->
<!--         layout="@layout/layout_loading" -->
<!--         android:clickable="true" /> -->

<!-- </RelativeLayout> -->