<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:padding="7dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item_corner_background"
        android:orientation="vertical"
        android:padding="5dp" >

        <RadioGroup
            android:id="@+id/radioGroupVoucher"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton                
                style="@style/RadioGroupStyle"
                android:id="@+id/radioNoVoucher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/radio_group_no_voucher" />

            <RadioButton
                android:id="@+id/radioVoucher"
                style="@style/RadioGroupStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/radio_group_voucher" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/groupVourcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                style="@style/RegisterTextStyle"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/address_giftcode_label" />

            <EditText
                android:id="@+id/txtVoucher"
                style="@style/RegisterEdittextStyle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="3dp" />
        </LinearLayout>

        <Button
            android:id="@+id/voucherBtn"
            style="@style/RegisterButtonStyle"
            android:layout_width="130dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_pink"
            android:text="@string/address_btn_voucher" />

        <!-- <Button -->
        <!-- android:id="@+id/confirmBtn" -->
        <!-- style="@style/RegisterButtonStyle" -->
        <!-- android:layout_width="130dp" -->
        <!-- android:layout_height="35dp" -->
        <!-- android:layout_gravity="center" -->
        <!-- android:layout_marginTop="20dp" -->
        <!-- android:background="@drawable/button_pink" -->
        <!-- android:text="@string/address_btn_next" /> -->
    </LinearLayout>

    <include
        android:id="@+id/notFoundContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/layout_not_found_data"
        android:visibility="gone" />

    <include
        android:id="@+id/loadingContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/layout_loading"
        android:visibility="gone" />

</RelativeLayout>